Stop text from resizing on iOS
Little line applied to the HTML style to stop paragraph text zooming in
on oritentation change

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,7 @@
 
 html {
 	height: 100%;
+	-webkit-text-size-adjust: none;
 }
 
 body {
